--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
    <head>
      <meta charset="UTF-8">
      <title> Barbearia Alura </title>
-     <link rel="stylesheet"href="style.css">
+     <link rel="stylesheet"href="style-home.css">
 
    </head>
 
 <body>
   <header>
-   <h1 class="titulo-principal">  Barbearia Alura </h1>
+   <h1 class="titulo-principal">Barbearia Alura </h1>
   </header>
    <img src="banner.jpg"class="imagembanner">
    <div class="principal">
