--- a/contato.html
+++ b/contato.html
@@ -2,6 +2,7 @@
 <html>
 <head>
  <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-with">
  <title> Contato-Barbearia Alura</title>
  <link rel="stylesheet" href="reset.css">
  <link rel="stylesheet" href="style.css">
@@ -79,7 +80,7 @@
 <th> 08;00 as 18;00</th>
 </tr>
 <tr>
-  <th> Sexta</th>
+  <th> Sexta </th>
   <th> 08;00 as 18;00</th>
 
 </tr>
